--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-google-maps/api": "^2.20.8",
+    "firebase": "^12.9.0",
     "framer-motion": "^12.34.0",
     "gsap": "^3.14.2",
     "lenis": "^1.3.17",
